--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "reactstrap": "^8.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,7 +38,6 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-airbnb": "^17.1.1",
     "node-sass": "^4.12.0"
   }
 }
